# vista-clients

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile.test  LICENSE  README.md  capture_session.exp  capture_session.py  pyproject.toml  session_log.txt
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
specs/001-vista-rpc-library/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-vista-rpc-library/checklists/: requirements.md
specs/001-vista-rpc-library/contracts/: api.md
specs/002-vista-terminal-library/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-vista-terminal-library/checklists/: requirements.md
specs/002-vista-terminal-library/contracts/: api.md
src/vista_clients/: __init__.py
src/vista_clients/rpc/: __init__.py  broker.py  errors.py  protocol.py  transport.py
src/vista_clients/terminal/: __init__.py  errors.py  expect.py  session.py  transport.py  vt100.py
src/vista_test/rpc/: __init__.py  broker.py  errors.py  protocol.py  transport.py
src/vista_test/terminal/: __init__.py  errors.py  expect.py  session.py  transport.py
tests/contract/: test_prompt_patterns.py  test_wire_format.py
tests/smoke/: test_lifecycle.py  test_quickstart.py  test_terminal_lifecycle.py
tests/unit/: test_broker.py  test_errors.py  test_protocol.py  test_session.py  test_stdlib_only.py  test_terminal_errors.py  test_terminal_expect.py  test_terminal_transport.py  test_transport.py  test_vt100.py
